<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">微博</string>
    <string name="cgt_menu_finish">退出</string>
    <string name="cgt_menu_account_manager">账号管理</string>
    <string name="cgt_menu_settings">设置</string>
    <string name="cgt_menu_officialweibo">官方微博</string>
    <string name="cgt_menu_night">夜间模式</string>
    <string name="cgt_menu_night_close">日间模式</string>
    <string name="cgt_menu_more">更多</string>

    <string name="cgt_tabbar_home">首页</string>
    <string name="cgt_tabbar_message">消息</string>
    <string name="cgt_tabbar_me">我</string>
    <string name="cgt_tabbar_discover">广场</string>
    <string name="cgt_tabbar_more">更多</string>

</resources>